# project-template

./: .env.template  .gitignore  README.md  docker-compose.yml  start.py
.github/workflows/: backend-ci.yaml  deploy_supabase.yaml  docker-upload.yaml  frontend-ci.yaml
app/: package-lock.json
app/app/(tabs)/: _layout.tsx  coupons.tsx  dates.tsx
app/constants/: Colors.ts
db/: Dockerfile  drizzle.config.ts  entrypoint.sh  package-lock.json  package.json  tsconfig.json
db/src/: schema.ts
fastapi/: Dockerfile  pyproject.toml
fastapi/src/: main.py
fastapi/src/api/: api.py
fastapi/src/api/routers/: health_router.py
fastapi/src/db/: client.py
fastapi/src/utils/: auth.py
fastapi/tests/: conftest.py  test_main.py
frontend/: .eslintrc.json  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css  main.jsx  routes.jsx
frontend/src/pages/: root.jsx
frontend/src/redux/: sagas.js  store.js  userSlice.js
rn-app/: .eslintrc.json  app.json  package-lock.json  package.json
rn-app/app/: _layout.tsx  login.tsx  modal.tsx
rn-app/app/(tabs)/: _layout.tsx  coupons.tsx  index.tsx
rn-app/components/: Login.tsx
rn-app/redux/: callPurge.js  sagas.js  store.js
rn-app/redux/sagas/: userSagas.js
rn-app/redux/slices/: userSlice.js
rn-app/utils/supabase/: api.js  client.js
supabase/: config.toml
supabase/functions/: .env.template  deno.json  import_map.json
supabase/functions/_shared/: cors.ts  db.ts  express_utils.ts
supabase/migrations/: 0000_silky_songbird.sql
(+42 files in other folders)
