[project]
dependencies = [
    "fastapi>=0.101.1",
    "uvicorn>=0.23.2",
    "numpy>=1.20",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
    "supabase>=2.4.0",
]
requires-python = ">=3.10"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-annotations>=3.0.1",
    "mypy>=1.4.1",
]


[tool.pdm.scripts]
start = "pdm run uvicorn src.main:app  --host 0.0.0.0 --port 8000 --reload"
isort = "isort src"
black = "black src"
pure_lint = "flake8 src"
type_check = "mypy src"
format = {composite = ["isort", "black"]}
lint = {composite = ["pure_lint", "type_check"]}


[mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
mypy_path = "src"
